# PaperMatrix

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
papermatrix/: __init__.py  batch.py  cache.py  chunk.py  cli.py  export.py  extract.py  llm.py  pdf.py  presets.py  schema.py  selector.py  source.py
papermatrix/presets/: general.json  machine-learning.json  plant-growth.json  survey.json
tests/: conftest.py  test_batch.py  test_chunk.py  test_cli.py  test_export.py  test_extract.py  test_llm.py  test_presets.py  test_schema.py  test_selector.py  test_source.py
