[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papermatrix"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "pymupdf",
    "pydantic",
    "pandas",
    "openai"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
papermatrix = "papermatrix.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--basetemp=.pytest_tmp"]

[tool.setuptools.packages.find]
include = ["papermatrix*"]

[tool.setuptools.package-data]
papermatrix = ["presets/*.json"]
